fixed gap between image and text

--- a/components/card.css
+++ b/components/card.css
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     width:18rem;
+    gap:0.8rem;
     
 }
 .card-image{
@@ -80,7 +81,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    
 }
 
 
